--- a/.github/workflows/auth-test.yml
+++ b/.github/workflows/auth-test.yml
@@ -1,46 +1,34 @@
-name: Authentication Automation Test
+name: run-auth-tests
 
 on:
-  workflow_dispatch:        # <-- manual run button enabled
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   run-auth-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install playwright requests pyjwt
-
-      - name: Install Playwright Browsers
-        run: |
-          python -m playwright install --with-deps
+          pip install -r requirements.txt
 
       - name: Create creds.json from GitHub Secrets
         run: |
-          echo "$CREDS_JSON" > creds.json
-        env:
-          CREDS_JSON: ${{ secrets.CREDS_JSON }}
+          echo "${{ secrets.CREDS_JSON }}" > creds.json
 
       - name: Run Authentication Test
-        run: |
-          python tests.py
+        run: python tests.py
 
-      - name: Upload Report (report.json)
-        uses: actions/upload-artifact@v4
+      - name: Upload Report
+        uses: actions/upload-artifact@v3
         with:
-          name: auth-test-report
+          name: report
           path: report.json
