--- a/.github/workflows/auth-test.yml
+++ b/.github/workflows/auth-test.yml
@@ -1,48 +1,43 @@
-name: Authentication Automation Test
+name: run-auth-tests
 
 on:
-  workflow_dispatch:        # <-- manual run button enabled
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   run-auth-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Install Dependencies
+      - name: Create virtual environment
         run: |
-          python -m pip install --upgrade pip
-          pip install playwright requests pyjwt
+          python -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
 
-      - name: Install Playwright Browsers
+      - name: Install dependencies
         run: |
-          python -m playwright install --with-deps
+          source venv/bin/activate
+          pip install -r requirements.txt
+          playwright install --with-deps chromium
 
       - name: Create creds.json from GitHub Secrets
-        run: |
-          echo "$CREDS_JSON" > creds.json
-        env:
-          CREDS_JSON: ${{ secrets.CREDS_JSON }}
+        run: echo "${{ secrets.CREDS_JSON }}" > creds.json
 
-      - name: Run Authentication Test
+      - name: Run Authentication Tests
         run: |
-            python -m venv venv
-            ource venv/bin/activate
-            python test/tests.py
+          source venv/bin/activate
+          python tests/tests.py
 
-      - name: Upload Report (report.json)
-        uses: actions/upload-artifact@v4
+      - name: Upload Report
+        uses: actions/upload-artifact@v3
         with:
-          name: auth-test-report
+          name: auth-report
           path: report.json
